<resources>
    <string name="app_name">Fitt</string>
    <string name="auth_failed">Contraseña</string>
    <string name="title_activity_menu_pricipal_usuario_navegacion">MenuPricipalUsuarioNavegacionActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_prueba_mapas">Map</string>

    <!--Strings activity_entrenador.xml-->
    <string name="entrenador_activity_name">Entrenador</string>
    <string name="entrenador_activity_button_mientrenador">Mi entrenador</string>
    <string name="entrenador_activity_button_buscarentrenador">Buscar entrenador</string>
    <string name="entrenador_activity_button_chatentrenador">Chat entrenador</string>
    <string name="entrenador_activity_imagebtn_mientrenador">carnet_logo</string>
    <string name="entrenador_activity_imagebtn_buscarentrenador">buscar_logo</string>
    <string name="entrenador_activity_imagebtn_chatentrenador">mensaje_logo</string>


    <!--Strings activity_chats.xml-->
    <string name="chats_activity_name">Tus Mensajes</string>
    <string name="chats_activity_user">Username</string>
    <string name="chats_activity_button_newMessage_name">Nuevo Mensaje</string>

    <!--Strings activity_entrenador_buscar_entrenador.xml-->
    <string name="entrenador_buscarEntrenador_activity_name">Buscar entrenador</string>
    <string name="entrenador_buscarEntrenador_activity_barraSearch">Ingresa nombre...</string>
    <string name="entrenador_buscarEntrenador_activity_spinnerStars">Calificación</string>
    <string name="entrenador_buscarEntrenador_activity_spinnerAnios">Años de Experiencia</string>

    <!--Strings activity_entrenador_miEntrenador.xml-->
    <string name="entrenador_miEntrenador_activity_name">Datos de mi entrenador</string>
    <string name="entrenador_miEntrenador_activity_username">Username</string>
    <string name="miEntrenador_numero_users">## Clientes</string>
    <string name="miEntrenador_Titulo">Status Titulo</string>
    <string name="miEntrenador_AniosExp">## Años de Experiencía</string>
    <string name="miEntrenador_AboutMe">Acerca de mi</string>
    <string name="miEntrenador_AboutMe_Desc">Descripcción</string>
    <string name="miEntrenador_button">Añadir Entrenador</string>
    <string name="miEntrenador_buttonasignado">Entrenador Actual</string>

    <!--Strings activity_nuevo_mensaje.xml-->
    <string name="nuevoMensaje_activity_name">Contactos</string>

    <!--Strings activity_pop_solicitarentrenador.xml-->
    <string name="solicitarEntrenador_name">Al parecer no tienes entrenador</string>
    <string name="solicitarEntrenador_descripccion">Para acceder a esta función necesitas un entrenador, agrega a uno ahora.</string>
    <string name="solicitarEntrenador_button">Buscar Entrenador</string>
    <!--Your comment-->

    <string name="google_places_key">AIzaSyCfgUbdpuSBiocdZjspf77fcGavcnDVv4g</string>

    <string-array name="diasSemana">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>


</resources>
