<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.Entrenador_buscarEntrenadorActivity">

    <TextView
        android:id="@+id/iniciarPausarReaunarTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/entrenador_buscarEntrenador_activity_name"
        android:textColor="@color/verdeFitt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/buscarEntrenadorText"
        android:layout_width="272dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/entrenador_buscarEntrenador_activity_barraSearch"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarPausarReaunarTV" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="nuevaBusqueda"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarPausarReaunarTV"
        app:srcCompat="@drawable/buscar_rutinas" />

    <ListView
        android:layout_width="342dp"
        android:layout_height="461dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerEntrenadorStars"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buscarEntrenadorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscarEntrenadorText"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerEntrenadorAnios"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buscarEntrenadorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscarEntrenadorText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/entrenador_buscarEntrenador_activity_spinnerAnios"
        app:layout_constraintBottom_toTopOf="@+id/_dynamic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toEndOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEntrenadorAnios"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="8dp"
        android:text="@string/entrenador_buscarEntrenador_activity_spinnerStars"
        app:layout_constraintBottom_toTopOf="@+id/_dynamic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEntrenadorStars"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>